@@ -10,3 +10,4 @@ t/03_tools.t
 TODO
 t/07_basic.t
 t/04_irange.t
+MapGen.dtd
