@@ -1,4 +1,4 @@
-# $Id: 05_export.t,v 1.5 2006/08/22 15:55:22 jettero Exp $
+# $Id: 05_export.t,v 1.6 2006/08/22 16:35:56 jettero Exp $
 
 use strict;
 use Test;
@@ -7,7 +7,7 @@ use Games::RolePlay::MapGen;
 my $map = new Games::RolePlay::MapGen({bounding_box => join("x", 25, 25) });
 generate $map;
 
-plan tests => 3 + (25*25);
+plan tests => 3 + (25*25) + 1;
 
 # if you know of a way to actually test these, you go ahead and email me, ok?
 
@@ -28,6 +28,9 @@ ok( -f "map.xml" );
 use XML::Simple;
 set_exporter $map("XML");
 export $map("map.xml"); 
+
+
+skip( (not (-f "/usr/bin/xmllint")) => system("xmllint --postvalid map.xml &>/dev/null"), 0);
 
 open IN, "map.xml" or die $!;
 my $xmap = XMLin( join("\n", <IN>) )->{'map'}; close IN;
