@@ -1,5 +1,6 @@
 0.27:  Tue Aug 22 11:55:20 EDT 2006
-   - jettero updated the xml exporter slightly
+   - jettero updated the xml exporter slightly, added xml validation to the
+     exporter test and built a DTD for the XML output.
 
 0.26:  Mon Apr  4 11:17:19 EDT 2005
    - jettero renamed Visualizations ----> Exporters
